langda/history/DoubleDC_5Round/test_history/pl___coin_:precise.pl_run4/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 8:16.% Problog Inference Result：
total(4) = 0.4096
total(3) = 0.8192
total(2) = 0.9728
total(1) = 0.9984
total(0) = 1.0000